# libwebcam-code

./: CMakeLists.txt  Makefile.am  README  autogen.sh  cmake_uninstall.cmake.in  configure.in  makedoc.sh
Apps/: CMakeLists.txt  Makefile.am
Apps/uvcdynctrl/: CMakeLists.txt  Makefile.am  README  controls.c  controls.h  main.c  uvcdynctrl.ggo
Apps/uvcdynctrl/data/046d/: logitech.xml
Apps/uvcdynctrl/udev/scripts/: uvcdynctrl
Common/include/: webcam.h
Libs/: CMakeLists.txt  Makefile.am
Libs/libwebcam/: CMakeLists.txt  CMakeTryV4L2.c  Makefile.am  README  compat.h  dynctrl.c  libwebcam.c  libwebcam.h
Libs/libwebcam/dynctrl/: logitech.xml  uvcconfig.xsd
common/include/: dynctrl-logitech.h  webcam.h
libwebcam/: CMakeLists.txt  compat.h  dynctrl.c  libwebcam.c  libwebcam.h
libwebcam/pkgconfig/: libwebcam.pc_base
uvcdynctrl/: CMakeLists.txt  cmdline.c  cmdline.h  controls.c  controls.h  main.c  uvcdynctrl.1_
uvcdynctrl/data/046d/: logitech.xml
uvcdynctrl/data/a0c8/: sisdop.xml
