#
# GENERAL
#
# The name of our project is "LIBWEBCAM".
# CMakeLists files in this project can refer to the root source directory of
# the project as ${LIBWEBCAM_SOURCE_DIR} and to the root binary directory of
# the project as ${LIBWEBCAM_BINARY_DIR}.
PROJECT (LIBWEBCAM)


#
# SUBDIRECTORIES
#

ADD_SUBDIRECTORY (Libs)
ADD_SUBDIRECTORY (Apps)
