#
# TARGETS
#

ADD_LIBRARY (webcam SHARED libwebcam.c dynctrl.c)


#
# COMPILATION AND LINKING
#

FIND_PACKAGE (LibXml2 REQUIRED)

INCLUDE_DIRECTORIES (${LIBWEBCAM_SOURCE_DIR}/Common/include ${LIBXML2_INCLUDE_DIR})

TARGET_LINK_LIBRARIES (webcam ${LIBXML2_LIBRARIES})


#
# INSTALLATION
#

INSTALL (
	TARGETS		webcam
	LIBRARY DESTINATION	lib
)
