#
# TARGETS
#

ADD_LIBRARY (webcam SHARED libwebcam.c dynctrl.c)

SET_TARGET_PROPERTIES (webcam PROPERTIES VERSION 0.1.2)


#
# COMPILATION AND LINKING
#

FIND_PACKAGE (LibXml2 REQUIRED)

INCLUDE_DIRECTORIES (${LIBWEBCAM_SOURCE_DIR}/Common/include ${LIBXML2_INCLUDE_DIR})

TARGET_LINK_LIBRARIES (webcam ${LIBXML2_LIBRARIES})


#
# INSTALLATION
#

if (NOT DEFINED CMAKE_INSTALL_LIBDIR)
	SET(CMAKE_INSTALL_LIBDIR "lib")
endif (NOT DEFINED CMAKE_INSTALL_LIBDIR)

INSTALL (
	TARGETS					webcam
	LIBRARY DESTINATION		${CMAKE_INSTALL_LIBDIR}
)
